<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/novigation_discover"
        android:icon="@drawable/discover_icon"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_attractions"
        android:icon="@drawable/attraction_icon"
        android:title="@string/title_attractions" />

    <item
        android:id="@+id/navigation_planner"
        android:icon="@drawable/planner_icon"
        android:title="@string/title_planner" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notification_icon"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/more_icon"
        android:title="@string/title_more" />

</menu>
